--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -2,6 +2,7 @@
 {% load permissionif %}
 {% load solo_tags %}
 {% load navigation %}
+{% load inlinetrans %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +16,9 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="{% static 'global_change_lab/js/user.min.js' %}"></script>
+
+  {% inlinetrans_static %}
+  {# {% inlinetrans_media %} output the same as the above #}
 
   <script>
     window.GCL = {
@@ -178,7 +182,45 @@
     </div>
   </footer>
 
-  <script>$(document).foundation();</script>
+  <script>
+    $(document).foundation();
+
+    {% if request.user.is_admin %}
+    // django-inlinetrans
+    (function ($) {
+        $(document).ready(function () {
+            var messages_dict = {
+                givetranslationfor: 'Give a new translation for {0} to {{ language }}',
+                emptytranslation: "You're sending an empty translation ¿Are you sure? ",
+                reloading: "Reloading",
+                apply_changes: "Apply changes",
+                applying_changes: "Applying changes",
+                error_cant_send: "Can't send translation",
+                error_cant_restart: "Can't restart server"
+            };
+            var new_translation_url = "{% url 'inlinetrans.views.set_new_translation' %}";
+            var restart_url = "{% url 'inlinetrans.views.do_restart' %}";
+
+            var toolbar_tpl = '\
+                <div class="inlinetransContainer">\
+                    <img id="changes-loading" src="{{ INLINETRANS_MEDIA_URL }}img/ajax-loader-transparent.gif"/>\
+                    <span class="inlinetransActions">\
+                        <span class="inlinetransAction hightlightTrans">See translatable items</span>\
+                        <span class="inlinetransAction hightlightNotrans">See non translated items</span>\
+                        <span class="inlinetransAction restartServer">Apply changes</span>\
+                    </span>\
+                </div>';
+            // init inlinetrans toolbar
+            // $('#{{ node_id }}').inlinetranstoolbar(toolbar_tpl, new_translation_url, restart_url, messages_dict);
+            var $trans_toolbar = $('<div id="inlinetrans-toolbar"></div>');
+            $(document).find('body').prepend($trans_toolbar);
+            // $trans_toolbar.height(200).width(200);
+            // $trans_toolbar.css('background-color', 'blue');
+            $trans_toolbar.inlinetranstoolbar(toolbar_tpl, new_translation_url, restart_url, messages_dict);
+        });
+    })(jQuery);
+    {% endif %}
+  </script>
 
   {% get_solo 'global_change_lab.SiteConfiguration' as site_config %}
   {{ site_config.analytics_code|safe }}
