[Fix] Superflous new link appears when finishing editing a link

--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -477,7 +477,7 @@ var EditorToolbarView = Backbone.View.extend({
     $('#modal-add-link button').on('click', addLink);
 
 
-    $('#modal-add-link').on('close', '[data-reveal]', function () {
+    $('#modal-add-link').on('close',function() {
       $(this).find('button').off('click', addLink);;
     });
 
