--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="large-6 columns">
         <h6>Comments</h6>
-        <a href="{% url 'admin_dashboard_flagged_comments' %}">View flagged comments</a>
+        <a href="{% url 'admin_flagged_comments' %}">View flagged comments</a>
       </div>
     </div>
   </section>
