[Add] Ability to flag to projects
+ Admin interface to see flagged project

--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -20,6 +20,10 @@
         <h6>Comments</h6>
         <a href="{% url 'admin_flagged_comments' %}">View flagged comments</a>
       </div>
+      <div class="large-6 columns">
+        <h6>Shares</h6>
+        <a href="{% url 'admin_flagged_shares' %}">View flagged shares</a>
+      </div>
     </div>
   </section>
   <hr>
