--- a/global_change_lab/templates/admin_flagged_comments.html
+++ b/global_change_lab/templates/admin_flagged_comments.html
@@ -19,14 +19,14 @@
   {# Hidden elements we supply for Javascript #}
 
   {#   Delete dropdown #}
-  <div id="comment-delete-dropdown" class="f-dropdown" data-dropdown-content>
+  <div id="delete-dropdown" class="f-dropdown" data-dropdown-content>
     <h6>Really delete this comment?</h6>
     <a href="#" class="delete button">Delete comment</a>
     <a href="#" class="button close info">Cancel</a>
   </div>
 
   {#   Flag dropdown #}
-  <div id="comment-flag-dropdown" class="f-dropdown" data-dropdown-content>
+  <div id="flag-dropdown" class="f-dropdown" data-dropdown-content>
     <h6>Really flag this comment?</h6>
     <a href="#" class="flag button">Flag comment</a>
     <a href="#" class="button close info">Cancel</a>
