[Design&Fix] trainingbit_view: Fix hover on "Upload image" button

--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -71,6 +71,12 @@
       position: relative;
       overflow: hidden;
       display: inline-block;
+
+      &:hover {
+        a.button {
+          background-color: black;
+        }
+      }
     }
     .upload-button input[type=file] {
       position: absolute;
